# dotmac-infra

./: .gitignore  Dockerfile.test  README.md  docker-compose.test.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
dotmac_infra/: Dockerfile.test  __init__.py  docker-compose.test.yml  run_tests.sh
dotmac_infra/control/: __init__.py  automation_engine_sdk.py  base_operations_sdk.py  integration_tests.py  job_queue_sdk.py  state_machine_sdk.py  task_scheduler_sdk.py  workflow_engine_sdk.py
dotmac_infra/dotmac_infra/platform/: cache_client.py  database_client.py  event_bus_client.py  observability_client.py  search_client.py
dotmac_infra/dotmac_infra/utils/: base_sdk.py
dotmac_infra/layer1/: __init__.py  address_sdk.py  contact_sdk.py  email_sdk.py  organization_sdk.py  phone_sdk.py
dotmac_infra/observability/: __init__.py  decorators.py  manager.py  middleware.py
dotmac_infra/platform/: __init__.py  cache_client.py  database_client.py  event_bus_client.py  file_storage_client.py  observability_client.py  search_client.py
dotmac_infra/utils/: __init__.py  base_sdk.py  enums.py  logging.py
tests/: __init__.py
tests/integration/: test_sdk_integration.py
tests/smoke/: test_package_imports.py
tests/unit/: test_dry_validation.py  test_enums.py
